# plastic-editor-react

./: .babelrc  .dockerignore  .eslintrc  .gitignore  .prettierignore  Dockerfile  Dockerfile-ci  README.md  docker-entry-static.sh  docker-entry.sh  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: binary-build.yml  dockerimage.yml  dockerimage.yml.yml
atom-util/: atomWithDebouncedStorage.ts
components/: 404.tsx  Loading.tsx  Note.tsx  Reference.tsx
components/Block/: BlockContent.tsx  LineDirection.tsx  Preview.tsx  index.tsx
components/Editor/: hooks.tsx  index.tsx  parser.ts  rules.ts  store.ts
components/Editor/adapters/: AdapterContext.tsx  memory.ts  supabase.ts  types.d.ts
components/Editor/blocks/: Bold.tsx  Code.tsx  Editable.tsx  HyperLink.tsx  Text.tsx  (+3 more)
components/LeftAside/: ToolButton.tsx  index.tsx
components/Main/: PageIdContext.tsx  index.tsx
components/MindMap/: index.tsx
components/Navbar/: PageSearchInput.tsx  index.tsx
components/Supabase/: Auth.tsx
components/social-buttons/: GitHubLoginButton.tsx  GitHubSocialButton.tsx  GoogleLoginButton.tsx  shared.ts
db/: index.ts  init.sql
hooks/: measure-preview.tsx  signin-signout.ts  useKey.tsx  useNanoid.ts
nginx/: nginx.conf  site-common.conf
pages/: _app.tsx  index.tsx
pages/docs/: en.tsx  index.tsx  zh.tsx
pages/graph/: [pageId].tsx
pages/login/: index.tsx
pages/note/: [pageId].tsx
pages/signup/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
types/: supabase.ts
