cargo-features = [ "strip" ]

[package]
name = "plastic-editor"
version = "0.1.0"
description = "A block-based note app"
authors = [ "fengkx" ]
license = ""
repository = ""
default-run = "plastic-editor"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = "symbols"
